# QuantumCT-RTRC-qBraid-Challenge

./: .gitignore  AGENTS.md  DCQO.md  README.md  dcqo.backup.ipynb  dcqo.ipynb  dqi.ipynb  dqi.py  evolve_unified.py  final_instances.json  fix_qpu_error.py  fix_qubits.py  generate_best_results.py  generate_plots.py  generate_plots_DQI.py  generate_plots_QAOA.py  generate_unified_notebook.py  gurobi.ipynb  gurobi.lic  instance_5.json  instances.json  instances_2.json  pyproject.toml  qCourier-YaleHackathon-2026.ipynb  qaoa.backup.ipynb  qaoa.ipynb  qaoa_sweep.ipynb  qite.ipynb  raw.txt  requirements-qite.txt  requirements.txt  result_graph.ipynb
.agents/: README.md  architecture.md  project-objective.md  runbook.md
Algorithms/: dqi.ipynb  ga.ipynb  gurobi.ipynb  qaoa_ibm.ipynb  qaoa_qbraid.ipynb  qite.ipynb
DQI_Results/: dqi_results.csv
YHack26/: A_n33_k6.txt  A_n36_k5.txt  A_n38_k5.txt  A_n53_k7.txt  A_n54_k7.txt  Instance_1.txt  Instance_3.txt  Instance_4.txt  classical.py  classical2.py  dqi.ipynb  dqi.py  dqi_benchmark_detailed.csv  dqi_benchmark_summary.csv  dqi_cleaned_with_profile.ipynb  dqi_copy.ipynb  instances.py  new_instance_2.json  qaoansatz.py
instances/: benchmark_VRP_solver.py  common.py  decomposition.py  hybrid_solver.py  local_search.py  quantum_improve.py  repair.py  setA_random_instances_grouped.json
notebooks/: Hybrid_CVRP_Unified.ipynb  qaoa_sweep.ipynb
src/: __init__.py  config.py  decoder.py  geometry.py  io_utils.py  main.py  metrics.py  models.py  postprocess.py  qaoa_solver.py  qubo_builder.py  runtime.py  sweep.py  validation.py  (+1 more)
(+358 files in other folders)
