[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-courier-sweep-qaoa"
version = "0.1.0"
description = "Sweep plus QAOA CVRP solver for the Quantum Courier Challenge"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=2.4",
  "scipy>=1.17",
  "matplotlib>=3.10",
  "jsonschema>=4.26",
  "pydantic>=2.12",
  "docplex>=2.32",
  "qiskit>=2.3",
  "qiskit-aer>=0.17",
  "qiskit-algorithms>=0.4",
  "qiskit-optimization>=0.7",
  "qiskit-ibm-runtime>=0.46",
  "qbraid>=0.11",
]

[tool.setuptools]
packages = ["src"]
